Simplify Question Box

--- a/packages/boxes.sty
+++ b/packages/boxes.sty
@@ -15,6 +15,7 @@
   belowcaptionskip=1\baselineskip,
   breaklines=true,
   frame=L,
+
   xleftmargin=\parindent,
   language=R,
   showstringspaces=false,
@@ -41,7 +42,7 @@
 \mdtheorem[
   linecolor=blue,
   frametitlefont=\sffamily\bfseries\color{white},
-  frametitlebackgroundcolor=blue,  
+  frametitlebackgroundcolor=blue,
   backgroundcolor=YellowGreen,
 ]{Exe}{Exercise}[subsection]
 
@@ -89,7 +90,7 @@
 }
 
 \newcommand{\quest}[1]{
-\textbf{\textbf{#1}}
+\textbf{#1}
 }
 
 \newcommand{\highlight}[1]{
